<resources>
    <string name="app_name">OCflexhelp\nCare Associate</string>
    <string name="account_create">Dont\'t have an account? "<b>"Create Now"</b>"</string>
    <string name="full_name">Full Name <font color='#FF0000'>*</font></string>
    <string name="last_name">Last Name <font color='#FF0000'>*</font></string>
    <string name="email">Email Address <font color='#FF0000'>*</font></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="term"><u>Terms &amp; Conditions</u></string>
    <string name="overview">This app/website is operated by OCflexhelp. Throughout the app/website, the terms “we”, “us” and “our” refer to OCflexhelp. OCflexhelp offers this app/website, including all information, tools and services available from this app/website to you, the user, conditioned upon your acceptance of all terms, conditions, policies and notices stated here.
        \n\nBy using our app/website, you engage in our “Service” and agree to be bound by the following Terms of Service (“Terms of Service”, “Terms”), including those additional Terms of Service and policies referenced herein and/or available by hyperlink. These Terms of Service apply to all users of the app/website, including without limitation users who are browsers, vendors, customers, clients, and/ or contributors of content.
        \n\nPlease read these Terms of Service carefully before accessing or using our app/website. By accessing or using any part of the app/website, you agree to be bound by these Terms of Service. If you do not agree to all the Terms of Service of this agreement, then you may not access the app/website or use any services. If these Terms of Service are considered an offer, acceptance is expressly limited to these Terms of Service.  Any new features which are added to the current app/website shall also be subject to the Terms of Service. You can review the most current version of the Terms of Service at any time on this page. We reserve the right to update, change or replace any part of these Terms of Service by posting updates and/or changes to our app/website. It is your responsibility to check this page periodically for changes. Your continued use of or access to the app/website following the posting of any changes constitutes acceptance of those changes.</string>
    <string name="general_term">1.1 By agreeing to these Terms of Service, you represent that you are at least the age of majority in your state or province of residence, or that you are the age of majority in your state or province of residence and you have given us your consent to allow any of your minor dependents to use this app/website.
    \n\n1.2 You may not use our app/website for any illegal or unauthorized purpose nor may you, in the use of the Service, violate any laws in your jurisdiction (including but not limited to copyright laws).
    \n\n1.3 You must not transmit any worms or viruses or any code of a destructive nature.
    \n\n1.4 A breach or violation of any of the Terms will result in an immediate termination of your Services.
    \n\n1.5 You agree not to reproduce, duplicate, copy, sell, resell or exploit any portion of the Service, use of the Service, or access to the Service or any contact on the app/website through which the service is provided, without express written permission by us.
    \n\n1.6 The headings used in this agreement are included for convenience only and will not limit or otherwise affect these Terms.</string>
    <string name="hiring_ic">

    </string>
    <string name="button_undo">undo</string>
    <string-array name="country_array">
        <item>Saudi Arabia</item>
        <item>Pakistan</item>
        <item>China</item>
        <item>Oman</item>
        <item>Jordan</item>
        <item>Egypt</item>
        <item>Syria</item>
        <item>Morroco</item>
    </string-array>
    <string-array name="time">
        <item>PM</item>
        <item>AM</item>
    </string-array>
    <string name="GENERAL_TERMS">
1.1 By agreeing to these Terms of Service, you represent that you are at least the age of majority in your state or province of residence, or that you are the age of majority in your state or province of residence and you have given us your consent to allow any of your minor dependents to use this app/website.
\n\n
1.2 You may not use our app/website for any illegal or unauthorized purpose nor may you, in the use of the Service, violate any laws in your jurisdiction (including but not limited to copyright laws).
\n\n
1.3 You must not transmit any worms or viruses or any code of a destructive nature.
\n\n
1.4 A breach or violation of any of the Terms will result in an immediate termination of your Services.
\n\n
1.5 You agree not to reproduce, duplicate, copy, sell, resell or exploit any portion of the Service, use of the Service, or access to the Service or any contact on the app/website through which the service is provided, without express written permission by us.
\n\n
1.6 The headings used in this agreement are included for convenience only and will not limit or otherwise affect these Terms.
</string>
    <string name="HIRING_AN_INDEPENDENT_CONTRACTOR">
2.1 Independent contractors are available for personal services that are non-medical in nature.
\n\n
2.2 All Independent contractors must pay for and get a Live Scan background check done.
\n\n
2.3 Independent contractors will create a profile with a clear picture.
\n\n
2.4 Independent contractors shall show proof of auto insurance before engaging in any services.
\n\n
2.5 Independent contractors shall show up to perform their service at least five minutes prior to the beginning of the service.
\n\n
2.6 Independent contractors are strictly prohibited from engaging in any service(s) that they deem to be potentially injurious to themselves or any third-party. Any Independent contractors choosing to proceed regardless of the dangers of a service do so at his/her own risk.
\n\n
2.7 The client/customer hires the Independent contractors at his/her/its own risk. We do not guarantee or warrant or represent that the Independent contractors will perform the services to any level of quality.
\n\n
2.8 Payment for services, plus mileage expenses, is required to be paid in advance of the services beginning.
\n\n
2.9 Clients/customers shall be in the car with the Independent contractors while the Independent contractors are driving.
\n\n
2.10 We do not take responsibility for accuracy of completeness of any service that is listed on our app/website. Such listings are done at the discretion of the client/customer and Independent contractors.
\n\n
2.11 Subject to the other provisions of the Terms of Service we will not be liable for any direct, indirect or consequential loss (including, without limitation, pure economic loss, loss of profits, loss of business, depletion of goodwill and similar loss), costs, damages, charges or expenses caused directly or indirectly by independent contractors, or our customers/clients.
</string>
    <string name="TERMS_FOR_INDEPENDENT_CONTRACTORS">
3.1 Independent contractors will be paid every two weeks and go through a review every six months.
\n\n
3.2 Any persons under the age of 18 who chose to act as Independent contractors must have a written consent form signed by a parent or guardian.
\n\n
3.3 Independent contractors enter a client/customer’s home at his/her own risk and agree to absolve and release us from any liability or damages that may occur.
\n\n
3.4 Independent contractors are strictly prohibited from driving vehicles that are not their own.
\n\n
3.5 Independent contracts may be terminated by us immediately for any physical, emotional, or verbal abuse of a customer/client, or for engaging in any illegal activity or wilful misconduct or gross negligence.
\n\n
3.6 Independent contractors must agree and acknowledge that all customers/clients serviced by the Independent contractors as part of this Service are the sole property of us and no Independent contractors may circumvent us and work with the customer/client directly if such customer/client was introduced to the Independent contractor by us. Any such circumvention shall be cause of monetary damages against the Independent contractors.
\n\n
3.7 Independent contractors must keep any and all information related to customers/clients, including, but not limited to, customer/clients’ contact information, strictly confidential and must not share this information with nay third-party or use this information for personal gain.
</string>
    <string name="Limitation_of_Liability">
4.1. Our total liability in contract, tort (including negligence or breach of statutory duty), misrepresentation, restitution or otherwise, arising in connection with us being in breach of our obligations under the Terms of Service is limited to any monies you have spent using our app/website, if any.
\n\n
4.2. We are not responsible for personal injuries you suffer while performing services, while working with Independent contractors, loss of profit, loss of business, harm to reputation, or depletion of goodwill in each case whether direct, indirect or consequential, or any claims for consequential compensation whatsoever (howsoever caused) which arise out of or in connection with the Terms of Service.
\n\n
4.3. All warranties, conditions and other terms implied by statute or common law are, to the fullest extent permitted by law, excluded from the Terms of Service.
\n\n
4.4 In no case shall OCflexhelp, our directors, officers, employees, affiliates, agents, contractors, interns, suppliers, service providers or licensors be liable for any injury, loss, claim, or any direct, indirect, incidental, punitive, special, or consequential damages of any kind, including, without limitation lost profits, lost revenue, lost savings, loss of data, replacement costs, or any similar damages, whether based in contract, tort (including negligence), strict liability or otherwise, arising from your use of any of the Service or from any services performed or requested using the Service, or for any other claim related in any way to your use of the service or any product, including, but not limited to, any errors or omissions in any content, or any loss or damage of any kind incurred as a result of the use of any service, even if advised of their possibility. Because some states or jurisdictions do not allow the exclusion or the limitation of liability for consequential or incidental damages, in such states or jurisdictions, our liability shall be limited to the maximum extent permitted by law.
\n\n
4.5 Information provided on the app/website is provided “as is” without warranty of any kind, either express or implied, including without limitation, warranties of merchantability, fitness for a particular purpose or noninfringement.
\n\n
We periodically change, improve, or update the information on the app/website without notice.
\n\n
We assume no liability or responsibility for any errors or omissions in the content of the app/website.
\n\n
Your use of the app/website is at your own risk. Under no circumstances and under no legal theory shall we, our partners, employees, affiliates, suppliers or vendors or any other party involved in creating, producing or delivering the app/website’s contents be liable to you or any other person for any indirect, special, incidental or consequential damages of any character arising from your access to, or use of, the app/website.
</string>
    <string name="ASSIGNMENT">
5.1 We may assign the Terms of Service or any part of it to any person, firm or company
\n\n
5.2 You will not be entitled to assign the Terms of Service or any part of it without our prior written consent.
</string>
</resources>