<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView39"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="Terms &amp; Conditions"
                android:textColor="@color/darkPurple"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="Overview"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/overview"
                android:textColor="#758089"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView401"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="SECTION 1 – GENERAL TERMS"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView410"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/general_term"
                android:textColor="#758089"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView402"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="SECTION 2 – HIRING AN INDEPENDENT CONTRACTOR"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView411"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/hiring_ic"
                android:textColor="#758089"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_signin"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_corner"
                android:text="Back"
                android:textColor="@drawable/txt_round_corner" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>