<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <View
                    android:id="@+id/active_divider"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_alignWithParentIfMissing="false"
                    android:layout_centerHorizontal="false"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="false"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@color/lightGrey" />

                <TextView
                    android:id="@+id/active_textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignWithParentIfMissing="false"
                    android:layout_centerHorizontal="false"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="false"
                    android:background="#fff"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="Billing"
                    android:textColor="#444C51"
                    android:textSize="16sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView80"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/full_name"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText100"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="John"
                    android:textColor="#758089"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView800"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/last_name"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText1000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:text="Doe"
                    android:textColor="#758089"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8_08"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:text="Company Name"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText1_010"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="Edwards Pvt Ltd"
                    android:textColor="#758089"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8_0_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:text="Country"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinner"
                    style="@style/style_Spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:entries="@array/country_array"
                    android:paddingBottom="5dp"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView808_"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:text="Street Address"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText1010_"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="House Number and Street Name"
                    android:textColor="#758089"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Appartment, Suite, Unit etc. (Optional) "
                    android:textColor="#758089"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_808"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:text="Town/City"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText_1010"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:inputType="text|number"
                    android:textColor="#758089"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_8_08"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:text="State"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText1_010_"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:inputType="text|number"
                    android:textColor="#758089"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_808_"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:text="Post Code"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText_101_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="#758089"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_80_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:text="Phone"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText101_0_"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="#758089"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView808"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/email"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText1010"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:inputType="textPassword|numberPassword"
                    android:textColor="#758089"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/button4"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/round_corner"
                android:text="NEXT"
                android:textAllCaps="false"
                android:textColor="@drawable/txt_round_corner" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>